# AsciiVideoEncoder

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE.txt  README.md
src/: bmp.cpp  filesys.cpp  functions.cpp  main.cpp
src/headers/: AsciiVideoEncoder.hpp  ascii.hpp  bmp.hpp  filesys.hpp  functions.hpp
